--- a/style.scss
+++ b/style.scss
@@ -301,6 +301,9 @@ footer {
 .flip-container
 {
     perspective: 1000;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
     float: left;
     margin: 20px;
     
@@ -313,6 +316,9 @@ footer {
 
 .flip-container:hover .flipper, .flip-container.hover .flipper {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
 }
 .flip-container, .front, .back {
 	width: 320px;
@@ -329,7 +335,13 @@ footer {
 /* flip speed goes here */
 .flipper {
 	transition: 0.6s;
+	-webkit-transition: 0.6s;
+	-moz-transition: 0.6s;
+	-ms-transition: 0.6s;
 	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
 	position: relative;
 }
 
@@ -351,6 +363,9 @@ footer {
 	z-index: 2;
 	/* for firefox 31 */
 	transform: rotateY(0deg);
+	-webkit-transform: rotateY(0deg);
+	-moz-transform: rotateY(0deg);
+	-ms-transform: rotateY(0deg);
 	box-shadow: 7px 8px 15px -2px rgba(0,0,0,0.2);
 }
 
@@ -358,6 +373,9 @@ footer {
 .back {
 	padding: 20px;
 	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	-ms-transform: rotateY(180deg);
 	background: #FFFFFF;
 }
 
@@ -368,8 +386,12 @@ footer {
     overflow-x: hidden;
     overflow-y: auto;
     -webkit-perspective: 1px;
+    -ms-perspective: 1px;
+    -moz-perspective: 1px;
     perspective: 1px;
     -webkit-perspective-origin-x: 100%;
+    -moz-perspective-origin-x: 100%;
+    -ms-perspective-origin-x: 100%;
     perspective-origin-x: 100%;
 }
 
@@ -381,17 +403,23 @@ footer {
     bottom: 0;
     transform-origin-x: 100%;
     -webkit-transform-origin-x: 100%;
+    -ms-transform-origin-x: 100%;
+    -moz-transform-origin-x: 100%;
     //DEMO STYLES?
     padding: 65vh 0;
 }
 
 .parallax__layer--base {
     -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
     transform: translateZ(0);
 }
 
 .parallax__layer--back {
     -webkit-transform: translateZ(-1px) scale(2);
+    -moz-transform: translateZ(-1px) scale(2);
+    -ms-transform: translateZ(-1px) scale(2);
     transform: translateZ(-1px) scale(2);
   background: url("http://artobserved.com/artimages/2013/02/Roy-Lichtenstein-Whaam-1963-Tate-Modernjpg.jpg");
   background-repeat: no-repeat;
