--- a/style.scss
+++ b/style.scss
@@ -315,7 +315,7 @@ footer {
     }
 }
 
-.flip-container
+.flip-container:hover
 {
 	z-index: 999;
 }
@@ -335,7 +335,7 @@ footer {
 }
 .flip-container, .front, .back {
 	width: 330px;
-	height: 240px;
+	height: 260px;
 }
 .flip-container:nth-child(2n + 2) .front
 {
