--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ body {
   //max-width: 740px;
   padding: 0 10px;
   width: 100%;
+  max-width: 740px;
   overflow: hidden;
 }
 
@@ -246,6 +247,7 @@ nav {
 #main
 {
 	padding: 0px;
+	max-width: 2000px;
 }
 
 .posts
