--- a/style.scss
+++ b/style.scss
@@ -311,6 +311,10 @@ footer {
     margin: 20px;
     position: relative;
     z-index: 10;
+    transition: z-index 0.6s;
+    -webkit-transition: z-index 0.6s;
+    -moz-transition: z-index 0.6s;
+    -ms-transition: z-index 0.6s;
     @include mobile
     {
     	margin-left:0px;
