--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <div>
+          <div class="site-info">
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </div>
