--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,13 +25,13 @@
       <div class="container">
         <header class="masthead clearfix">
           <div class="site-info">
-            <p class="site-description">{{ site.description }}</p>
+            <p class="site-description"><a href="/">{{ site.description }}</a></p>
           </div>
 
-          <div class="site-info">
+          <nav class="site-info" style="margin-top: 0px;">
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-          </div>
+          </nav>
         </header>
       </div>
     </div>
