--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             <p class="site-description"><a href="/">{{ site.description }}</a></p>
           </div>
 
-          <nav class="site-info" style="margin-top: 0px;">
+          <nav style="margin-top: 0px;">
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
