--- a/style.scss
+++ b/style.scss
@@ -445,6 +445,7 @@ footer {
   background: url("http://artobserved.com/artimages/2013/02/Roy-Lichtenstein-Whaam-1963-Tate-Modernjpg.jpg");
   background-repeat: no-repeat;
   background-size: 100% 70vh;
+  position: relative;
 }
 
 #title {
