--- a/style.scss
+++ b/style.scss
@@ -459,10 +459,18 @@ footer {
   color: $white;
   font-size: 28vh;
   text-shadow: 9px 3px $black;
+  @include mobile {
+  	font-size: 28vw;
+  }
 }
 #title::before {
   content: "the";
   font-size: 50%;
+  @include mobile {
+  	line-height: 0;
+  	float: left;
+  	margin-left: 10px;
+  }
 }
 
 
