--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
     <script>
       document.addEventListener("DOMContentLoaded", function (e) {
         lightbox();
-        spiderWeb();
+        //spiderWeb();
+        coverToggle();
       });
     </script>
 
