--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,16 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+
     <script src="{{ site.baseurl }}/js/plugins.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function (e) {
         lightbox();
-        //spiderWeb();
+        spiderWeb();
         coverToggle();
       });
+
+
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
