--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ body {
   padding: 0 10px;
   width: 100%;
   max-width: 960px;
-  overflow: hidden;
+  *overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -76,7 +76,7 @@ a {
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    *color: $blue;
   }
 }
 
@@ -252,9 +252,10 @@ nav {
 
 .posts
 {
-  float: right;
+  float: left;
 	max-width: 100%;
 	overflow:hidden;
+  *-webkit-column-count: 3;
 }
 
 .posts > .post {
@@ -323,25 +324,27 @@ footer {
     width: 280px;
     margin: 10px;
     /*border-bottom: 5px solid black;*/
-    transition: height 1.5s, width 1s, border-color 1s, background 1s, color 1.5s;
+    transition: height 1.5s, width 1s, border-color 1s, background 1s, color 0s;
     transition-timing-function: ease;
     overflow: hidden;
-    float: right;
+    float: left;
+    clear: both;
+    *-webkit-column-break-inside: avoid;
 }
+.node:not(.selected):hover
+{
+    background: #CCC;
+}
+/*
 .node:nth-child(3n) {
   height: 260px;
-  float: left;
 }
 .node:not(.selected) .entry
 {
   display: none;
-}
+}*/
 .selected
-{
-    position: absolute;
-    height: 400px;
-    width: 400px;
-    border-color: red;    
+{   
     background: white;
     color: $darkerGray;
 }
@@ -357,11 +360,8 @@ footer {
     float: left;
     *margin: 20px;
     position: relative;
-    z-index: 10;
-    transition: z-index 0.6s;
-    -webkit-transition: z-index 0.6s;
-    -moz-transition: z-index 0.6s;
-    -ms-transition: z-index 0.6s;
+    z-index: 0;
+    overflow: hidden;
     @include mobile
     {
     	margin-left:0px;
@@ -516,17 +516,21 @@ footer {
 
 #lightbox
 {
-  position: fixed;
-  height: calc(100vh - 100px);
-  width: 100%;
-  max-width: 800px;
-  top: 50px;
-  left: calc(50% - 400px);
-  box-shadow: 0px 0px 10px 10px rgba(100,100,100,0.1);
+  height: 100vh; 
+  width: 600px;
+  border-color: $darkGray;
+  border-style: solid;
+  border-width: 4px 20px 0px 0px;
+  padding-top: 20px;
   background: white;
-  padding: 20px;
-  border-radius: 10px;
+  margin: 20px;
   z-index: 12;
+  float: right;
+  position: relative;
+  transition: opacity 1s;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -ms-transition: opacity 1s;
 }
 #lightbox-modal
 {
@@ -541,27 +545,33 @@ footer {
 .lightbox-hidden
 {
   opacity: 0;
-  display: none;
 }
 .lightbox-active
 {
   opacity: 1;
-  display: block;
-  transition: opacity 1s;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -ms-transition: opacity 1s;
 }
 .lightbox-nav
 {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select:none;
+  user-select:none;
+  -o-user-select:none;
   position: absolute;
-  opacity: 0.1;
+  opacity: 1;
   font-size: 120px;
-  top: calc(50% - 60px);
+  /* top: calc(50% - 60px); */
+  top: 0px;
+  color: rgba(150,0,0,0.1);
+  height: 100%;
+  padding: 6px;
+  padding-top: calc(50% - 60px);
+  transition: background 0.5s, color 0.5s;
 }
 .lightbox-nav:hover
 {
-  opacity: 1;
+  background: rgba(0,0,0,0.1);
+  color: rgba(150,0,0,0.3);
 }
 #lightbox-next
 {
@@ -581,9 +591,13 @@ footer {
   /*border-bottom: 10px solid black;*/
   margin: 10px;
   text-shadow: 9px 3px $black;
+  transition: text-shadow 0.5s;
   @include mobile {
   	font-size: 28vw;
   }
+}
+#title:hover {
+    text-shadow: -8px 3px #CC0000;
 }
 #title::before {
   content: "the";
@@ -599,7 +613,7 @@ footer {
   border-top: 4px solid #222;
   content: "my name is legion, for we are many";
   float: left;
-  margin-top: 12px;
+  margin-top: -20px;
   font-size: 20px;
   line-height: 20px;
   text-align: right;
