--- a/style.scss
+++ b/style.scss
@@ -335,6 +335,11 @@ footer {
 {
     background: #CCC;
 }
+.post p
+{
+	margin: 0px !important;
+	text-indent: 20px;
+}
 /*
 .node:nth-child(3n) {
   height: 260px;
